@@ -13,7 +13,6 @@ import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import study.withkbo.exception.common.CommonError;
@@ -42,6 +41,12 @@ public class GameService {
     public List<GameInfoResponseDto> selectGameInfo(String month) {
         List<Game> gamesSearchMonth;
 
+        gamesSearchMonth = gameRepository.findByMatchDateStartingWith(month);
+
+        if (!gamesSearchMonth.isEmpty()) {
+            return gamesSearchMonth.stream().map(GameInfoResponseDto::new).toList();
+        }
+
         try {
             Element doc = gameInfoCrawling(month);
             Elements gameInfo = doc.select("#scheduleList tr");
@@ -50,16 +55,17 @@ public class GameService {
             gameInfoToEntity(gameInfo, teamMap);
 
         } catch (Exception e) {
+            log.error("게임 정보 크롤링 중 오류 발생: {}", e.getMessage());
             throw new CommonException(CommonError.INTERNAL_SERVER_ERROR);
         }
 
         gamesSearchMonth = gameRepository.findByMatchDateStartingWith(month);
 
-        if (gamesSearchMonth != null && !gamesSearchMonth.isEmpty()) {
-            return gamesSearchMonth.stream().map(GameInfoResponseDto::new).collect(Collectors.toList());
-        } else {
+        if (gamesSearchMonth.isEmpty()) {
             throw new CommonException(CommonError.GAME_NOT_FOUND);
         }
+
+        return gamesSearchMonth.stream().map(GameInfoResponseDto::new).collect(Collectors.toList());
     }
 
     public Document gameInfoCrawling(String month) {
@@ -88,7 +94,11 @@ public class GameService {
 
     private Map<String, Team> stringTeamToMap(List<Team> teams) {
         return teams.stream()
-                .collect(Collectors.toMap(Team::getTeamName, team -> team));
+                .collect(Collectors.toMap(
+                        Team::getTeamName,
+                        team -> team,
+                        (existing, replacement) -> existing // 중복 키가 발생할 경우 기존 값을 유지
+                ));
     }
 
     @Transactional
@@ -144,7 +154,7 @@ public class GameService {
         if (games.isEmpty()) {
             throw new CommonException(CommonError.GAME_NOT_FOUND);
         }
-        return games.stream().map(GameResponseDto::new).collect(Collectors.toList());
+        return games.stream().map(GameResponseDto::new).toList();
     }
 
     private String gameMatchDateParser(String matchDate) {
